@@ -1,4 +1,4 @@
 DIST gcstar-1.2.2.tar.gz 2037121 RMD160 fb7cde04bda23f75cd0bec2b3d331b54c75c0ff4 SHA1 cf4b09ad8e5fba1f2b0c1bf2ce5e5c2efacc482a SHA256 eeab4b735e011a41786180c77baa7f4b668313f1791b8f76f9fdb8dbbb5b0d03
-EBUILD gcstar-1.2.2.ebuild 1816 RMD160 e33dff6bff2b7a2e036dd07d527ba503b6b864ef SHA1 4dda932fff7c65faedf3a4633c457477f8173cf7 SHA256 137926d1b4c775b7f0c65180141acdac258bf18f5b07cf614312629f2b7dd900
-MISC ChangeLog 1449 RMD160 00fc0d57a7c7071d01b446fe653b0c2c728f4e85 SHA1 76ce5f07eab924b42d30348dba67999790ffa9aa SHA256 3a867d4dc998876eb7f61f3832a6ae22d681ded3f7fa10dba9d6930b1d1b2dc3
+EBUILD gcstar-1.2.2.ebuild 1762 RMD160 04b876462486d99aa0ca032d61f47b19ef12bde0 SHA1 a0e13286ab3f7be55c9a378c7d9cf5f5683b4962 SHA256 133848f7062659d3fcebb781be480a6c82efc4e80f1add3c51b1a85bcc4543c2
+MISC ChangeLog 1581 RMD160 5e05c89ef69806e77114392aabd4aad846fb973d SHA1 7223e9252ba99a20a0d1d3c3ec2f6d92fe12a40c SHA256 2958f929b8b43dd96c5d9f8f1c9e08f9d1689b1042564da96f80ab44688e742f
 MISC metadata.xml 524 RMD160 4d9ced3974593caa9271f47141d857a2029613a2 SHA1 de063ca643a9bdd8e7674ba08ff14a40a1ab0282 SHA256 573345a2c97f639155d775b833572466c6a802b04b1069572fd5d3b3b250b60f
